--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v3  # Ensure you have the correct version
 
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v3
@@ -34,4 +34,7 @@ jobs:
       run: dotnet publish --configuration Release --output ./publish
 
     - name: Upload build artifact
-      uses: actions/upload
+      uses: actions/upload-artifact@v3
+      with:
+        name: drop
+        path: ./publish
